--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,12 @@
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.24",
     "axios": "^1.6.8",
+    "chakra-paginator": "^0.7.3",
     "framer-motion": "^11.0.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-js-pagination": "^3.0.2",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
     "typescript": "^4.9.5",
@@ -49,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-js-pagination": "^3.0.7"
   }
 }
