--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
     "react-js-pagination": "^3.0.2",
     "react-loading-icons": "^1.1.0",
