--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18.2.24",
     "axios": "^1.6.8",
     "chakra-paginator": "^0.7.3",
+    "formik": "^2.4.6",
     "framer-motion": "^11.0.25",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
@@ -30,6 +31,7 @@
     "react-loading-icons": "^1.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
+    "react-ts-typewriter": "^0.1.8-b",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
