--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,9 +20,11 @@
     "@types/react-dom": "^18.2.24",
     "axios": "^1.6.8",
     "chakra-paginator": "^0.7.3",
+    "dayjs": "^1.11.11",
     "formik": "^2.4.6",
     "framer-motion": "^11.0.25",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
