--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "react-js-pagination": "^3.0.2",
     "react-loading-icons": "^1.1.0",
     "react-moment": "^1.1.3",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
     "react-ts-typewriter": "^0.1.8-b",
